temp_split done

--- a/Functions/Functions/FunctionsOverload.vcxproj
+++ b/Functions/Functions/FunctionsOverload.vcxproj
@@ -144,6 +144,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Templates.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Fill Rand.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
